# invoicer

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 081d0483ec25_added_placeholder_localization_org_type.py  1ab7787cc917_template_config_currency_format_fields.py  205e03dc1713_added_padding_to_document_sequence_.py  97a29ca91bb5_create_invoices_table.py  a753d12cd791_assets_template_persistence.py  c17612701fde_initial_schema.py
app/: config.py  paths.py
app/assets/: hashing.py  id.py  mime.py  models.py  paths.py  provider.py  repository.py  service.py  storage.py
app/core/: diagnostics.py  errors.py  results.py
app/db/: associations.py  seed.py  seed_registry.py  session.py  types.py
app/db/models/: __init__.py  bank_account.py  bank_account_localization.py  document_sequence.py  invoice_line.py  invoice_line_localization.py  organization.py  organization_localization.py  party.py  representative.py  representative_localization.py  service_line.py  service_line_localization.py  snap_bank_account.py  snap_bank_account_localization.py  snap_invoice_line.py  snap_invoice_line_localization.py  snap_organization.py  snap_organization_localization.py  snap_party.py  snap_party_localization.py  snap_representative.py  (+4 more)
app/domain/: constants.py  enums.py
app/services/: errors.py  language.py  money.py  spell_total.py
tests/: conftest.py  test_blueprint.py  test_core.py  test_normalization.py  test_orchestration.py  test_parser.py  test_rendering.py  test_services_assembler.py  test_services_money.py  test_template_persistence.py
(+144 files in other folders)
